--- a/real.tt
+++ b/real.tt
@@ -87,12 +87,13 @@
 /ac {^( 你摇头晃脑、歪歪斜斜，濒于晕倒}{exert qi;/delay {3}{exert qi;hp}}
 /ac {^( 你已经陷入半昏迷状态，神智全失}{wh}
 /ac {^你所选用的武功中没有这种必杀技。}{get jade;get staff}
-/read gag.sc
-/read path.sc
-/read normal.sc
-/read quest.sc
-/nop read team.sc
-/read status.sc
+/read comm/gag.sc
+/read comm/normal.sc
+/read comm/path.sc
+/read comm/quest.sc
+/read comm/status.sc
+/read comm/pet.sc
+/read comm/autorecover_hc.sc
 /nop log o $myname.log
 /al stopk {/unticker {kill};nokill}
 /al hxdazuo {exercise 300;hh;/delay {2.1}{dazuo}}
@@ -111,7 +112,6 @@
      remove all;
      wear all
 }
-/read autorecover_hc.sc
 /al qq {xixi;quest}
 /al ffy {recall back;w;n;e;e;e;n;u}
 /ac {^任务被你完}{j;/showme =================================================}
