--- a/claw.tt
+++ b/claw.tt
@@ -28,18 +28,21 @@
 /ac {^小小爪不知从哪里窜}{/var haspet 1}
 /al pj {/if {$haspj==0 && $haspet ==1}{performp freeze}}
 /al pjj {/if {$haspj==1 && $haspet ==1}{performp canglongzhaxian;/showme ---freeze faill--try to busy}}
-/al pk {/if {$haspet ==1}{do order wield sword,performp sharenruma,order unwield sword;/showme --pet pf sword ---sharenruma---}}
 /al pk {/if {$haspet ==1}{do order wield sword,performp duxin,order unwield sword;/showme --pet pf sword ---duxin---}}
+/al pk {/if {$haspet ==1}{do order wield sword,performp sharenruma,order unwield sword;/showme --pet pf sword ---sharenruma---}}
 /ac {将周身凝聚的冰块震得粉碎！！}{/var haspj 0;pj}
 /var haspj 0
 /ac {^小小爪左手虚握，形成一团奇冷}{/var haspet 1;/var haspj 1}
 /ac {^但是被%1机灵地躲开了。}{/var haspj 1;/var haspet 1;de5 {/var haspj 0;pj;pjj};}
-/ac {^奇冷的寒气包围了}{/var haspj 1;/var haspet 1;pk;de5 {/var haspj 0};de5 pj;/showme ============ freeze ===========}
+/ac {^奇冷的寒气包围了}{/var haspj 1;/var haspet 1;de4 pk;de5 {/var haspj 0};de5 pj;/showme ============ freeze ===========}
 /read comm/autorecover_hc.sc
 /var jqs_lost_limit 0.1
-/ac {^你的伤势好了一些}{stopk;de2 {exert jingxin;cks};}
+/ac {^你的伤势好了一些}{stopk;de2 {hxx;cks};}
 /ac {^疗伤时至少需要有最大内力值护体}{hn;sleep sleepbag;de2 cks}
-/al hx {/if {$is_kill ==0 && $is_walk ==0 }{exert jingxin;use baiyao;}}
+/var hashxx 0
+/al hxx {/if {$hashxx==0}{exert jingxin}} 
+/ac {^你静气平声，按着清平心法}{/var hashxx 1;de2 {/var hashxx 0}}
+/al hx {/if {$is_kill ==0 && $is_walk ==0}{do exert jingxin,use baiyao}}
 /var hasblade 0
 /var hasanqi 0
 /var hashand 0
@@ -157,19 +160,22 @@
     /if {$fdok ==0}{hhh};
     pk;
 }
+/nop mihun busy
+/ac {^一时之间，}{pk}
 /var fdok 0
 /ac {阴风扑面，差点儿晕了过去。$}{/showme -------放毒成功----;/var fdok 1}
 /ac {^面对你雷霆一般的一击}{/var qienpc 1}
-/ac {^你停住了手，用飘飘的眼光}{/var mhok 0;/delay {14.2}{/var mhok_t 1}}
+/ac {^你停住了手，用飘飘的眼光}{iskill;/var mhok 0;/delay {14.2}{/var mhok_t 1}}
 /nop polu todo
 /var haspo 0
-/al trypo {/if {$haspo==0 && $is_kill==1}{po;de2 po;de4 po}}
-/ac {^在森森剑影间玫瑰色的薄雾冉冉升起，说不尽的凄迷幽艳，%1忽感}{/if {"%1"=="你“}{}{trypo;}}
-/ac {脸憋得通红，忽感天旋地转}{trypo}
-/ac {^袖中伸出纤纤素手}{/var haspo 1}
+/al trypo {/if {$haspo==0 && $is_kill==1}{po}}
+/ac {^在森森剑影间玫瑰色的薄雾冉冉升起，说不尽的凄迷幽艳，%1忽感}{/if {"%1"=="你“}{}{trypo;de3 trypo}}
+/ac {脸憋得通红，忽感天旋地转}{trypo;de3 trypo}
+/ac {^袖中伸出纤纤素手}{/var haspo 1;iskill}
 /var haskill 0
 /al ki {do wield zhufu sword,i,hp;
         set target %0;
+        /var target %0;
         wh;
         /delay {0.5}{
             wpet;
@@ -254,8 +260,8 @@
         /var haspo 0;
         /undelay {checkbg};
         }
-/ac {^你向%1开始移动。（40->35)}{/if {$mhok==1}{j};/if {$fdok==0}{hhh}}
-/ac {^你向%1开始移动。（35->30)}{/if {$mhok==1}{j};/if {$fdok==0}{hhh}}
+/ac {^你向%1开始移动。（40->35)}{iskill;/if {$mhok==1}{j};/if {$fdok==0}{hhh}}
+/ac {^你向%1开始移动。（35->30)}{iskill;/if {$mhok==1}{j};/if {$fdok==0}{hhh}}
 /ac {^你向%1开始移动。（30->25)}{/if {$mhok==1}{j};/if {$fdok==0}{hhh}}
 /al sk {stopk;cks}
 /ac {^你的法力太低}{hp}
@@ -295,6 +301,8 @@
 /ac {^看起来%0想杀死你！}{
             wi zhufu sword;
             reffs;
+           /if {$is_kill==1}{wh};
+            gongji $target;
             pj;
             /if {$haskill == 0}{
             /if {$qieok==1}{qie}{
@@ -302,7 +310,7 @@
                             };
                             }
             /var knpc_name %0;
-            de2 iskill;
+            /nop de2 iskill;
                          }
 /al wim {wi zhufu sword;wi sword2}
 /al fy2room {wlk;do d,s,w,u,e,u,u,u,u,u,u,u,u,u;roomin;nwlk}
