--- a/zen.tt
+++ b/zen.tt
@@ -21,6 +21,8 @@
 /read comm/normal.sc
 /read comm/path.sc
 /read comm/autorecover.sc
+/read comm/gag.sc
+/log a ../zen.log
 /al qq {fox;quest}
 /al eatall {drink hulu;de4 {eat mantou}}
 /al ffy {recall back;w;n;e;e;e;n;u}
