--- a/shaman.tt
+++ b/shaman.tt
@@ -1,122 +1,311 @@
 #config {TINTIN CHAR} /
-/var myname shaman
+/var myname shaman 
 /nop session $myname sh.fengyun.com 6666
 /nop session $myname 117.135.143.81 6666
 /session $myname fy.sysfon.com 6000
-/nop session $myname fy.hbisp.com 3333
 /al tchat {/ticker {checkchat}{/if {$is_kill==0 && $is_walk==0}{checkchat}}{120}}
 /al ntchat {/unticker {checkchat}}
+/format ttfile {%s.tt}{$myname}
+/al reload {/read $ttfile}
 /act {^请选择您使用的内码}{0}
 /act {^您的英文名字：} {$myname}
-/al reload {/read $myname.tt}
 /ac {此英文名字已被使用，请输入此帐号的密码}{Sea123}
-/ac {^请敲回车键［ＲＥＴＵＲＮ］}{/cr;/ticker {noidle}{lure;}{280}}
-/ac {^重新连线完毕。}{/cr;/ticker {noidle}{lure}{280}}
-/ac {^#SESSION '%0' DIED.}{/read %0.tt}
-/ac {^#SESSION '%0' ACTIVATED.}{/read %0.tt}
-/ac {^  帝王谷%0护士(Nurse)}{give nurse silver;tget 30 silver}
-/var hasstaff 0
-/var hashand 0
-/var hasblade 0
-/var hashammer 0
-/al wistaff {/if {$hasstaff==0}{unwi all;wi staff}}
-/al wihand {/if {$hashand==0}{unwi all;wi jade}}
-/al wiblade {/if {$hasblade==0}{wi blade;wi hu-blade;wi futou}}
-/al wihammer {wi hammer}
-/al wiw wistaff
-/al wih wihand
-/ac {^  √%1taff)}{/var hasstaff 1;/var hashand 0} 
-/ac {^  √戒指(Jade)}{/var hashand 1;/var hasstaff 0} 
-/ac {^你从怀中摸出一对戒}{/var hashand 1;/var hasstaff 0} 
-/ac {^你将手上的戒指藏入}{/var hashand 0} 
-/ac {^你把%0紧紧地握在手中}{/var hashand 0;/var hasstaff 1} 
-/al buff {i;perform dodge.gouweixudiao}
-/al lx {wiblade;perform yipianlianxin}
-/al xl {wihand;perform xianglongwuhui}
-/al sc {wihand;perform shichengliulong}
-/var islian 0
-/ac {^你双手猛然一抖一拢}{pj;/var hashand 1;/var hasstaff 0;/var islian 0} 
-/al ki {wiblade;set target %0;buff;/delay {2}{kill %0;startk}}
-/ac {^你对著%0！今日不是你死就是我活！} {iskill;startk}
-/nop ------------
-/var xl_max 0
-/var sc_ok 0
-/var zjbl_ok 0
-/al ak xl
-/al kkx {/ticker {kill}{/if {$zjbl_ok==1}{zjbl}{ak}}{2.1}}
-/nop al startk {xl;/al ak xl;kkx}
-/al startk {wihammer;wi futou}
-/al kx startk
-/al ssk startk
-/ac {^你将降龙十八掌的十八式融会贯通，幻出十八个掌影一连击向%1的十八处要害}{
-    iskill;
-    /var npc %1;
-    /var zjbl_ok 0;
-    /var xl_max 0;
-    /delay {20}{/var xl_max 1;/al ak xl};
-    /var sc_ok 0;
-    /al ak sc;
-}
-/al czj {wistaff;perform chuozijue}
-/al bzj {wistaff;perform banzijue}
-/al tzj {wistaff;perform tiaozijue}
-/al yzj {wistaff;perform yinzijue}
-/al zjbl {wihand;perform zhenjingbaili}
-/al ps bzj
-/ac {^%1只觉掌风扑面，气息窒滞}{
-    iskill;
-    /var ncp %0;
-    zjbl;
-    /al ak zjbl
-}
-/ac {^你的真气被打乱了，使不出震惊百里}{/var zjbl_ok 0;/if {$xl_max==1}{/al ak xl}{/al ak sc}}
-/ac {^你将要触到%1身子，突施劲力，－－－－－－－－－震　惊　百　里！}{/var zjbl_ok 1}
-/ac {^%1已经破绽毕露，还不趁机进攻}{czj}
-/ac {足尖着力，飘身后退。}{/var zjbl_ok 0;/al ak bzj}
-/ac {^随着长声惨叫}{czj;/al ak sc}
-/ac {你只好招式突换，一棍随手挥出}{/al ak sc}
-/al sc+ {
-/ac {和身扑上，旋转着但极快疾地欺近你} {zjbl}; 
-/ac {身形乍然一矮，你掌力掠顶而过，有惊无险地避开这招} {bzj};
-/ac {招架此招} {tzj};
-/ac {俨然无懈可击} {ps};
-/al {觑得亲切，不退反进，借势击向你} {yzj};
-/ac {斜斜滑出三尺，一时间中路空门大开，正是时机} {czj}
-}
-/al sc- {
-/ac {和身扑上，旋转着但极快疾地欺近你}; 
-/ac {身形乍然一矮，你掌力掠顶而过，有惊无险地避开这招};
-/ac {招架此招};
-/ac {俨然无懈可击};
-/al {觑得亲切，不退反进，借势击向你};
-/ac {斜斜滑出三尺，一时间中路空门大开，正是时机}
-}
-/nop -----------------
-/ac {^你大喝一声，犹似半空响了个霹雳}{}
-/al stopk {/var zjbl_ok 0;/var xl_max 0;/unticker {kill};nokill}
-/ac {^你对著%0说道：在下%1，领教壮士的高招！}{iskill;startk}
-/ac {^『降龙无悔』只能对战}{stopk;cks}
-/ac {^『时乘六龙』只能对战}{stopk;cks}
-/ac {^『震惊百里』只能对战}{stopk;cks}
-/ac {^你的法力太低}{hp}
-/nop ac {^( 你似乎十分疲惫，看来需要好好休息了}{hh;/delay {2}{hh}}
-/ac {^( 你头重脚轻，正在勉力支撑著不倒下去)}{exert qi;/delay {1}{exert qi}}
-/ac {^( 你摇头晃脑、歪歪斜斜，濒于晕倒}{/al ak bzj;exert qi;/delay {3}{exert qi;hp}}
-/ac {^( 你已经陷入半昏迷状态，神智全失}{sk}
-/ac {^你所选用的武功中没有这种必杀技。}{get blade;get futou}
+/ac {^请敲回车键［ＲＥＴＵＲＮ］}{/cr;/ticker {noidle}{xixi;}{280}}
+/ac {^重新连线完毕。}{/cr;/ticker {noidle}{hehe}{280}}
+/ac {^#SESSION '%0' DIED.}{reload}
+/ac {^#SESSION '%0' ACTIVATED.}{reload}
 /read comm/gag.sc
 /read comm/path.sc
 /read comm/normal.sc
 /read comm/quest.sc
 /read comm/status.sc
 /read comm/pet.sc
+/var petname xhs
+/var haspet 0
+/al wpet {order wear all}
+/ac {^你对着小小}{/var haspet 1;/showme --pet has 1----}
+/ac {^悟空不知从哪里窜}{/var haspet 1}
+/al pj {/if {$haspj==0 && $haspet ==1}{performp freeze}}
+/al pjj {/if {$haspj==1 && $haspet ==1}{performp canglongzhaxian;/showme ---freeze faill--try to busy}}
+/al pk {/if {$haspet ==1}{do order wield sword,performp duxin,order unwield sword;/showme --pet pf sword ---duxin---}}
+/al pk {/if {$haspet ==1}{do order wield sword,performp sharenruma,order unwield sword;/showme --pet pf sword ---sharenruma---}}
+/ac {将周身凝聚的冰块震得粉碎！！}{/var haspj 0;pj}
+/var haspj 0
+/ac {^小小爪左手虚握，形成一团奇冷}{/var haspet 1;/var haspj 1}
+/ac {^但是被%1机灵地躲开了。}{/var haspj 1;/var haspet 1;de5 {/var haspj 0;pj;pjj};}
+/ac {^奇冷的寒气包围了}{/var haspj 1;/var haspet 1;de4 pk;de5 {/var haspj 0};de5 pj;/showme ============ freeze ===========}
 /read comm/autorecover_hc.sc
-/nop log o $myname.log
+/var jqs_lost_limit 0.1
+/ac {^你的伤势好了一些}{stopk;de2 {hxx;cks};}
+/ac {^疗伤时至少需要有最大内力值护体}{hn;sleep sleepbag;de2 cks}
+/var hashxx 0
+/al hxx {/if {$hashxx==0}{exert jingxin}} 
+/ac {^你静气平声，按着清平心法}{/var hashxx 1;de2 {/var hashxx 0}}
+/al hx {/if {$is_kill ==0 && $is_walk ==0}{do exert jingxin,use baiyao}}
+/var hasblade 0
+/var hasanqi 0
+/var hashand 0
+/var hasfushou 0
+/var sword2 0
+/var blade2 0
+/var hammer2 0
+/var hammer 0
+/var spear 0
+/var hassword 0
+/al ishammer {/var hammer  1;/var spear 0;/showme ishammer;}
+/al nohammer {/var hammer 0;/showme nohammer;}
+/al iblade {/var hasblade 1;/var hasanqi 0;/var hashand 0; /showme iblade;}
+/al noblade {/var hasblade 0;/showme noblade;}
+/al isword {/var hassword 1;/var hasanqi 0;/var hashand 0; /showme isword;}
+/al nosword {/var hassword 0;/showme nosword;}
+/al ihand {/var hashand 1;/var hasanqi 0;/var hasblade 0; /showme ihand;}
+/al nohand {/var hashand 0; /showme nohand;}
+/al ifushou {/var hasfushou 1;/showme ifushou;}
+/al nofushou {/var hasfushou 0;/showme nofushou;}
+/al isword2 {/var sword2 1;/var blade2 0;/showme is sword2;}
+/al nosword2 {/var sword2  0;/showme no sword2;}
+/al isblade2 {/var sword2 0;/var blade2 1;/showme is blade2;}
+/al noblade2 {/var blade2  0;/showme no blade2;}
+/al ishammer2 {/var hammer2 1;/var sword2 0;/var blade2 0;/showme is hammer2;}
+/al nohammer2 {/var hammer2  0;/showme no hammer2;}
+/al isspear {/var spear 1;/var sword2 0;/var blade2 0;/var hammer2 0;/var hammer 0;/showme is spear;}
+/al nospear {/var spear 0;/showme no spear;}
+/ac {^你装备神之祝福铁锤}{ishammer}
+/ac {^你放下手中的神之祝福铁锤。}{nohammer}
+/ac {^  √神之祝福铁锤(zhufu hammer)}{ishammer}
+/ac {^你装备神之祝福宝剑作武器}{isword}
+/ac {^你拿出一根★断魂★握在手中。}{isspear}
+/ac {^你放下手中的★断魂★。}{nospear}
+/ac {^你放下手中的神之祝福宝剑}{nosword}
+/ac {^你放下手中的圆月弯刀}{noblade}
+/ac {^你将手中的＊赤炼＊插入腰间}{nosword2}
+/ac {^你放下手中的＊百鬼夜狂＊}{noblade2}
+/ac {^你抽出一把明晃晃的＊赤炼＊}{isword2}
+/ac {^你「唰」地一声抽出一把＊赤炼＊}{isword2}
+/ac {^你抽出一把明晃晃的＊百鬼夜狂＊}{isblade2}
+/ac {^你拿出一把★流星★}{ishammer2}
+/ac {^  √★流星★(hammer2)(LV1)}{ishammer2}
+/ac {^你放下手中的★流星★}{nohammer2}
+/ac {^    ★流星★(hammer2)}{nohammer2}
+/ac {^  √★断魂★(sleepbag)(LV1)}{isspear}
+/ac {^    ★断魂★(sleepbag)(LV1)}{nospear}
+/ac {^  √＊赤炼＊(sword2)}{isword2}
+/ac {^    ＊赤炼＊(sword2)}{nosword2}
+/ac {^  √＊百鬼夜狂＊(blade2)}{isblade2}
+/ac {^    ＊百鬼夜狂＊(blade2)}{noblade2}
+/ac {^  √神之祝福宝剑(zhufu sword)}{isword}
+/ac {^    神之祝福宝剑(zhufu sword)}{nosword}
+/al wifushou {/if {$hasfushou==0}{wi jade}}
+/al wihand {/if {$hashand==0}{unwi all}}
+/al wispear {/if {$spear==0}{do unwield all,wield sleepbag}}
+/al wihammer {/if {$spear==1}{do unwield sleepbag,wield zhufu hammer}{/if {$hammer==0}{wi hammer}}}
+/al wiblade {wifushou;/if {$hasblade==0}{unwi piece;unwi needle;wi jade2}}
+/al wis2 {
+        /if {$blade2==1}{do unwield blade2,wield sword2}{
+                                /if {$sword2==0}{wi sword2}
+                                                }
+         }
+/al wib2 {
+/showme wib2 sword2=$sword2 blade2=$blade2 ;
+        /if {$sword2==1}{do unwield sword2,wield blade2}{
+                                /if {$blade2==0}{wi blade2}
+                                                }
+         }
+/al reffs {
+            /if {$sword2==1}{do unwield sword2,wield sword2};
+            /if {$blade2==1}{do unwield blade2,wield blade2};
+            }
+/al buff {perform dodge.wuwuwuwo}
+/al j {exert mihunshu}
+/al jjj {perform dodge.lianhuanbu}
+/al jjj {perform yanduhantan;/showme @@@@ sword busy}
+/al kk {wi sword;perform shuanglengcanxia  &&&& steps busy}
+/al h {exert huaxue}
+/al hhh {exert chillbreath}
+/al k {kk}
+/ac {^你对著%0！今日不是你死就是我活！} {pj;de2 iskill;}
+/nop ------------
+/al ps {/showme  === auto pf ===}
+/al startk {
+        /ticker {kill}{
+            j;
+            pj;
+            de3 pj;
+            }{7.1}
+            }
+/nop 『棋盘切』（gobankiri）
+/nop 『百鬼夜狂』（hyakki）
+/al bg {set secon_perform hyakki;wib2;/showme ====== 刀  bg}
+/al qie {set secon_perform gobankiri;wib2;/showme ########### 刀 qie######}
+/al jj {do unwield sword,wield blade,perform gobankiri;slcx}
+/nop 『碧映光寒』(biyingguanghan)
+/nop duanhun-spear
+/al sm {do unwiled all,wield sleepbag,perform suomengchanhun;/showme ====== smch 挑兵器=====}
+/al sm {wispear;perform suomengchanhun;/showme smch 挑兵器=====}
+/al bygh {wisword;perform sword.biyingguanghan}
+/nop 『霜冷残霞』(shuanglengcanxia)
+/nop 『碧映光寒』(biyingguanghan)
+/nop 『雁渡寒潭』〔yanduhantan〕
+/nop 『意染苍云』（yirancangyun）
+/al slcx {set secon_perform shuanglengcanxia;wis2;/showme ====== 剑  slcx}
+/al yrcy {set secon_perform yirancangyun;wis2;/showme ====== 剑  *yrcy}
+/al po   {do unwield all,perform unarmed.polu,wield zhufu sword;slcx}
+/al tp {perform dodge.feiyanshi}
+/nop 技能检查
+/var yrcyok 1
+/var bgok 0
+/var qieok 1
+/var qieok_t 0
+/var bgok_t 0
+/var qpok 0
+/var mhok 1
+/var mhok_t 0
+/var qienpc 0
+/nop todo---
+/al okyrcy {/var yrcyok 1}
+/nop smch 锁梦残魂
+/var smnpc 0
+/var smok 1
+/ac {^你向%1开始移动。（40->35)}{de2 {/if {$smok==1}{sm}}}
+/unac {^你向%1开始移动。（30->25)}{/if {$smok==1}{sm;/showme --- 2 try to sm--}}
+/ac {^smch 挑兵器}{/var smok 0}
+/ac {^你使出一式『锁梦缠魂』，枪身似灵蛇}{iskill;/var smok 0;/var smnpc 1;/delay {60}{/var smok 1};
+    do unwield sleepbag,wield hammer,wield hammer2;
+    }
+/ac {^你使出一式『锁梦缠魂』，手中的}{iskill;/var smok 0;/var smnpc 0;/delay {60}{/var smok 1};
+    do unwield sleepbag,wield hammer,wield hammer2;
+    }
+
+/nop 百鬼busy效果
+/var npcbusy 0
+/ac {^突然，一蓬鲜血激射}{
+    /var npcbusy 6;
+    /if {$fdok ==0}{hhh};
+    pk;
+}
+/nop mihun busy
+/ac {^一时之间，}{pk}
+/var fdok 0
+/ac {阴风扑面，差点儿晕了过去。$}{/showme -------放毒成功----;/var fdok 1}
+/ac {^面对你雷霆一般的一击}{/var qienpc 1}
+/ac {^你停住了手，用飘飘的眼光}{iskill;/var mhok 0;/delay {14.2}{/var mhok_t 1}}
+/nop polu todo
+/var haspo 0
+/al trypo {/if {$haspo==0 && $is_kill==1}{po}}
+/ac {^在森森剑影间玫瑰色的薄雾冉冉升起，说不尽的凄迷幽艳，%1忽感}{/if {"%1"=="你“}{}{trypo;de3 trypo}}
+/ac {脸憋得通红，忽感天旋地转}{trypo;de3 trypo}
+/ac {^袖中伸出纤纤素手}{/var haspo 1;iskill}
+/var haskill 0
+/al ki {do wield zhufu sword,i,hp;
+        set target %0;
+        /var target %0;
+        /nop wh;
+        /delay {0.5}{
+            wpet;
+            /nop if {$qieok==1 || $qieok_t ==1 && $qienpc==0}{qie}{
+                          /nop if {$shaqi>0 || $bgok_t==1}{bg}{
+                                        /nop if {$yrcyok==1}{yrcy}{slcx};
+                                             /nop        };
+                                             /nop         };
+            /var haskill 1;
+            }
+        de1 buff;
+        /nop startk;
+        /delay {3.1}{
+            kill %0;
+            gongji %0;
+                    }
+        }
+/al ki {i;buff;de1 {wihammer;wi hammer2};de2 {/var target %0;kill %0}} 
+/nop slcx pfm info
+/ac {^你手中＊赤炼＊贴身斜指向上}{
+    iskill;
+    /showme =========== slcx ==============;
+    /if {$qieok==1 || $qieok_t ==1 && $qienpc==0}{qie}{
+                            /if {$shaqi>0 || $bgok_t==1}{bg}{
+                                        /if {$yrcyok==1}{yrcy}{slcx};
+                                                    };
+                                                      };
+    /delay {2.1} {
+                    /if {$shaqi>0 || $bgok_t==1}{bg}{
+                                                    /if {$yrcyok==1}{yrcy}{slcx};
+                                                    };
+                 };
+    }
+/ac {^你突然仰天长嚎}{
+    iskill;
+    cks;
+    /showme =========== bg ==============;
+    /if {$qieok==1 || $qieok_t ==1 && $qienpc==0}{qie}{/if {$yrcyok==1}{yrcy}{slcx};};
+    /var bgok 0;
+    /var bgok_t 0;
+    /delay {122}{/var bgok_t 1};
+}{4}
+/ac {^自右上方直向}{
+    hp;
+    pj;
+    iskill;
+    /showme =========== qie ==============;
+    /var qieok 0;
+    /delay {60.2}{/var qieok_t 1};
+    /if {$shaqi>0 || $bgok_t==1}{bg}{
+        /if {$yrcyok==1}{yrcy}{slcx}; 
+                        }; 
+                     }
+/ac {^设定环境变数：secon_perform = "hyakki"}{
+    /delay {checkbg} {
+        /if {$is_kill ==1 && $qienpc ==0}{
+            /if {$shaqi>0 || $bgok_t==1}{bg}{
+                    /if {$yrcyok==1}{yrcy}{slcx}; 
+                                            }; 
+                         }
+                 } {9.1}
+}
+/nop   {^设定环境变数：secon_perform = "hyakki"}
+/nop yrcy 
+/ac {^你脸上神色惨然，猛一咬牙}{
+    /var yrcyok 0;
+    de1 cks;
+    /delay {181}{/var yrcyok 1};
+    /if {{$qieok==1 || $qieok_t ==1} && $qienpc==0}{qie}{
+            /if {$shaqi>0 || $bgok_t==1}{bg}{slcx};
+                                    };
+}
+/al stopk {
+        /showme {----kill 变量重置};
+        nokill;/unticker {kill};
+        /var smok 1;
+        /var smnpc 0;
+        /var qieok 1;
+        /var qieok_t 0;
+        /nop var bgok_t 0;
+        /var mhok 1;
+        /var qienpc 0;
+        /var fdok 0;
+        /var haskill 0;
+        /var haspo 0;
+        /undelay {checkbg};
+        }
+/al sk {stopk;cks}
+/ac {^你的法力太低}{hp}
+/ac {^( 你似乎十分疲惫}{h;/showme ----todo 危险-----}
+/ac {^( 你头重脚轻，正在勉力支撑著不倒下去)}{exert huaxue;tp}
+/ac {^( 你摇头晃脑、歪歪斜斜，濒于晕倒}{wh;tp}
+/ac {^( 你已经陷入半昏迷状态，神智全失}{jiasi}
+/ac {^你所选用的武功中没有这种必杀技。}{;}
+/ac {^『锁梦缠魂』只能对战}{sk}
+/ac {^『连环步』只能对战}{sk}
+/ac {^『雁渡寒潭』只能对战}{sk}
+/ac {^迷魂术只能对战}{sk}
+/ac {^此特技只能在战斗中使用}{sk}
+/ac {^『破颅』只能对战}{sk}
+/ac {^『飞雁式』只能在战斗}{sk}
+/ac {^你不在战斗中，不需要假死}{sk}
+/ac {^『九阴毒雾』只能在战}{sk}
 /al hxdazuo {exercise 300;hh;/delay {2.1}{dazuo}}
-/al hx {get matong from bag; drink matong; put matong in bag}
-/ac {^你的真气不够。}{/if {$is_kill==0 && $is_walk==0}{exercise 500;hn}}
-/ac {^你所受到的%0效用消失了}{/if {$is_kill==0  || $is_walk==0}{}{j;jj;jjj}}
-/unac {^然而，%1已经死了}{cks}
+/al hs {drink dai}
+/ac {^你的真气不够。}{/if {$is_kill==0 && $is_walk==0}{hn}}
+/ac {^然而，%1已经死了}{hhh;/if {$is_kill==1}{cks};}
 /al getitem {
     pick needle;
     get 1200 needle from cactus bonsai;
@@ -129,20 +318,52 @@
      remove all;
      wear all
 }
-/al qq {fox;quest}
-/al ffy {recall back;w;n;e;e;e;n;u}
-/al yangcw {withdraw 50000;de3 {withdraw 50000};de6 {yang monkey $HIY$ 小和尚 xhs};de9 {whistle;hp}}
-/al yangcw2 {dismissp xxz;withdraw 50000;de2 {withdraw 50000};de4 {yang monkey $HIY$ 小小真 xxz};de6 whistle;de7 scorep}
-/al yyyy {/ticker {yang}{dismissp xhs;de2 {yangcw}}{12}}
+/al qq {quest}
+/al ffy {recall back;do w,n,e,e,e,n,u}
+/ac {^任务被你完}{wk}
 /al eatall {gb meat;drink dai;de2 {eat meat}}
-/ac {^胡大掌柜的现钱已经不够}{
-    w;s;s;
-    /unticker yang;
-    /delay {22}{ffy};
-    /delay {24}{wlk;d;w;w;w;n};
-    /delay {25} {withdraw 5000000};
-    /delay {30} {do s,e,e,e;fy2gw};
-    /delay {42}{do w,n,n,n,n,e;deposit 5 tenthousand-cash;nwlk};
-    /delay {47}{yyyy};
+/ac {^看起来%0想杀死你！}{
+            wi zhufu hammer;
+            wi hammer2;
+           /nop reffs;
+           /nop if {$is_kill==1}{wh};
+            gongji $target;
+            pj;
+            /if {$haskill == 0}{
+            /if {$qieok==1}{
+                /nop qie;
+            }{
+                 /nop if {$shaqi>0 || $bgok_t==1}{bg}{slcx}
+                            };
+                            }
+            /var knpc_name %0;
+            /nop de2 iskill;
+                         }
+/al wim {wi zhufu sword;wi sword2}
+/al fy2room {wlk;do d,s,w,u,e,u,u,u,u,u,u,u,u,u;roomin;nwlk}
+/al room2fy {pl {wlk;out;d;d;d;d;d;d;d;d;d;w;d;e;n;u;nwlk};pr}
+/al roomin {928}
+/al getitem {
+    pick needle;
+    get 1200 needle from cactus bonsai;
+     stack;
+     retrieve 5954;
+     remove all;
+     wear all
 }
-/var jqs_lost_limit 0.5
+/al hj {use hugu}
+/ac {^需等待%0秒才能再次使用迷魂术}{/showme ----todo ----;}
+/ac {^你手中＊赤炼＊剑气回转}{/showme *******************       secon sword pfm   ******}
+/al yangcw {withdraw 50000;de2 {withdraw 50000};
+    de4 {yang monkey $YEL$ 悟空 $petname};
+    de7 whistle;
+    de9 scorep;
+    }
+/ac {^你对着小小}{/var haspet 1;/showme --pet has 1----}
+/ac {^你不可以在这里用内功}{wlk}
+/ac {^你必须至少空出一只手来}{i}
+/ac {^使出一式『一切随缘』，剑身似灵蛇般缠住你手中的兵刃，神之祝福宝剑脱手而飞}{qt zhufu sword;nosword;de2 {qt zhufu sword;de2 {wi zhufu sword}}}
+/nop 水离(Shui li)	** 战斗中 **(LV 
+/ac {^疗伤时至少需要有最大内力值护体}{hn;de2 cks}
+/ac {^此人已经不需要使用此疗伤心法}{cks}
+/ac {^你所受到的菩提虚空步法·无物无我的效用消失了。}{}
