--- a/zen.tt
+++ b/zen.tt
@@ -1,12 +1,12 @@
 #config {TINTIN CHAR} /
-/var myname claw 
+/var myname stick 
 /nop session $myname sh.fengyun.com 6666
 /nop session $myname 117.135.143.81 6666
 /nop session $myname china.fengyun.com 6000
 /nop session $myname fy.hbisp.com 3333
-/nop session $myname fy.sysfon.com 6000
+/session $myname fy.sysfon.com 6000
 /nop mud123.com 7000 
-/session $myname mud123.com 7000
+/nop session $myname mud123.com 7000
 /al tchat {/ticker {checkchat}{/if {$is_kill==0 && $is_walk==0}{checkchat}}{120}}
 /al ntchat {/unticker {checkchat}}
 /act {^请选择您使用的内码}{0}
@@ -35,3 +35,4 @@
 /showme tsss
 }
 /nop unac {^format (%+)}
+/al ffy {wlk;recall back;do w,n,e,e,e,n,u;nwlk}
