--- a/claw.tt
+++ b/claw.tt
@@ -123,7 +123,7 @@
         /ticker {kill}{
             j;
             pj;
-            de3 pj;
+            /nop de3 pj;
             }{7.1}
             }
 /nop °∫∆Â≈Ã«–°ª£®gobankiri£©
@@ -193,7 +193,8 @@
         startk;
         /delay {3.1}{
             kill %0;
-            gongji %0;
+            /if {$haspet==0}{wh;de2 gongji %0};
+           /nop gongji %0;
                     }
         }
 /nop slcx pfm info
@@ -306,8 +307,7 @@
             wi zhufu sword;
             reffs;
             gongji $target;
-           /if {$is_kill==1}{wh};
-            gongji $target;
+           /if {$haspet==0}{wh};
             pj;
             /if {$haskill == 0}{
             /if {$qieok==1}{qie}{
